--- a/package.json
+++ b/package.json
@@ -9,10 +9,32 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@babel/cli": "^7.21.0",
+    "@babel/core": "^7.21.3",
+    "@babel/preset-env": "^7.20.2",
+    "@openzeppelin/contracts": "^4.8.2",
+    "@truffle/hdwallet-provider": "^2.1.9",
+    "babel-loader": "^9.1.2",
+    "babel-register": "^6.26.0",
+    "bootstrap": "^5.2.3",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "ethers": "^6.2.2",
+    "ipfs-http-client": "^60.0.0",
+    "moment": "^2.29.4",
     "next": "13.2.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-bootstrap": "^2.7.2",
+    "react-dom": "18.2.0",
+    "react-scripts": "^5.0.1",
+    "truffle": "^5.8.1",
+    "web3": "^1.9.0"
+  },
+  "devDependencies": {
+    "chai": "^4.3.7",
+    "chai-as-promised": "^7.1.1",
+    "dotenv": "^16.0.3",
+    "lodash": "^4.17.21",
+    "openzeppelin-solidity": "^3.4.2"
   }
 }
