--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "ethers": "^6.2.2",
+    "firebase": "^9.18.0",
     "ipfs-http-client": "^60.0.0",
     "moment": "^2.29.4",
     "next": "13.2.4",
