--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-	"cSpell.words": ["IPFS", "jtkanedev", "unfollow"]
+	"cSpell.words": ["IPFS", "jtkanedev", "unfollow", "unfollowed", "Unfollowing"]
 }
