--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "web3": "^1.9.0"
   },
   "devDependencies": {
+    "@openzeppelin/test-helpers": "^0.5.16",
     "chai": "^4.3.7",
     "chai-as-promised": "^7.1.1",
     "dotenv": "^16.0.3",
