--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@openzeppelin/test-helpers": "^0.5.16",
     "chai": "^4.3.7",
     "chai-as-promised": "^7.1.1",
+    "chai-bn": "^0.3.1",
     "dotenv": "^16.0.3",
     "lodash": "^4.17.21",
     "openzeppelin-solidity": "^3.4.2"
