--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@babel/core": "^7.21.3",
     "@babel/preset-env": "^7.20.2",
     "@openzeppelin/contracts": "^4.8.2",
+    "@reduxjs/toolkit": "^1.9.3",
     "@truffle/hdwallet-provider": "^2.1.9",
     "babel-loader": "^9.1.2",
     "babel-register": "^6.26.0",
@@ -27,6 +28,7 @@
     "react": "18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "18.2.0",
+    "react-redux": "^8.0.5",
     "react-scripts": "^5.0.1",
     "truffle": "^5.8.1",
     "web3": "^1.9.0"
