--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "@babel/cli": "^7.21.0",
     "@babel/core": "^7.21.3",
     "@babel/preset-env": "^7.20.2",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@openzeppelin/contracts": "^4.8.2",
     "@reduxjs/toolkit": "^1.9.3",
     "@truffle/hdwallet-provider": "^2.1.9",
@@ -40,6 +44,7 @@
     "chai-bn": "^0.3.1",
     "dotenv": "^16.0.3",
     "lodash": "^4.17.21",
-    "openzeppelin-solidity": "^3.4.2"
+    "openzeppelin-solidity": "^3.4.2",
+    "styled-components": "^5.3.9"
   }
 }
