create tweet layout and design

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,20 @@
 {
-	"cSpell.words": ["fontawesome", "fortawesome", "IPFS", "jtkanedev", "unfollow", "unfollowed", "Unfollowing"]
+	"cSpell.words": [
+		"adipisicing",
+		"amet",
+		"elit",
+		"facere",
+		"fontawesome",
+		"fortawesome",
+		"IPFS",
+		"Ipsa",
+		"jtkanedev",
+		"maxime",
+		"omnis",
+		"temporibus",
+		"ullam",
+		"unfollow",
+		"unfollowed",
+		"Unfollowing"
+	]
 }
