mint tweet nft, upload metadata to ipfs and pin with pinata

--- a/package.json
+++ b/package.json
@@ -1,50 +1,55 @@
 {
-  "name": "decentralized-twitter",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@babel/cli": "^7.21.0",
-    "@babel/core": "^7.21.3",
-    "@babel/preset-env": "^7.20.2",
-    "@fortawesome/fontawesome-svg-core": "^6.4.0",
-    "@fortawesome/free-brands-svg-icons": "^6.4.0",
-    "@fortawesome/free-solid-svg-icons": "^6.4.0",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "@openzeppelin/contracts": "^4.8.2",
-    "@reduxjs/toolkit": "^1.9.3",
-    "@truffle/hdwallet-provider": "^2.1.9",
-    "babel-loader": "^9.1.2",
-    "babel-register": "^6.26.0",
-    "bootstrap": "^5.2.3",
-    "eslint": "8.36.0",
-    "eslint-config-next": "13.2.4",
-    "ethers": "^6.2.2",
-    "firebase": "^9.18.0",
-    "ipfs-http-client": "^60.0.0",
-    "next": "13.2.4",
-    "react": "18.2.0",
-    "react-bootstrap": "^2.7.2",
-    "react-dom": "18.2.0",
-    "react-redux": "^8.0.5",
-    "react-scripts": "^5.0.1",
-    "truffle": "^5.8.1",
-    "web3": "^1.9.0"
-  },
-  "devDependencies": {
-    "@openzeppelin/test-helpers": "^0.5.16",
-    "chai": "^4.3.7",
-    "chai-as-promised": "^7.1.1",
-    "chai-bn": "^0.3.1",
-    "dotenv": "^16.0.3",
-    "lodash": "^4.17.21",
-    "moment": "^2.29.4",
-    "openzeppelin-solidity": "^3.4.2",
-    "styled-components": "^5.3.9"
-  }
+	"name": "decentralized-twitter",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@babel/cli": "^7.21.0",
+		"@babel/core": "^7.21.3",
+		"@babel/preset-env": "^7.20.2",
+		"@fortawesome/fontawesome-svg-core": "^6.4.0",
+		"@fortawesome/free-brands-svg-icons": "^6.4.0",
+		"@fortawesome/free-solid-svg-icons": "^6.4.0",
+		"@fortawesome/react-fontawesome": "^0.2.0",
+		"@openzeppelin/contracts": "^4.8.2",
+		"@pinata/sdk": "^2.1.0",
+		"@reduxjs/toolkit": "^1.9.3",
+		"@truffle/hdwallet-provider": "^2.1.9",
+		"babel-loader": "^9.1.2",
+		"babel-register": "^6.26.0",
+		"bootstrap": "^5.2.3",
+		"bs-platform": "^9.0.2",
+		"cryptocurrency-icons": "^0.18.1",
+		"eslint": "8.36.0",
+		"eslint-config-next": "13.2.4",
+		"ethers": "^6.2.2",
+		"firebase": "^9.18.0",
+		"html-to-image": "^1.11.11",
+		"ipfs-http-client": "^60.0.0",
+		"next": "13.2.4",
+		"react": "18.2.0",
+		"react-bootstrap": "^2.7.2",
+		"react-cryptocoins": "^1.0.11",
+		"react-dom": "18.2.0",
+		"react-redux": "^8.0.5",
+		"react-scripts": "^5.0.1",
+		"truffle": "^5.8.1",
+		"web3": "^1.9.0"
+	},
+	"devDependencies": {
+		"@openzeppelin/test-helpers": "^0.5.16",
+		"chai": "^4.3.7",
+		"chai-as-promised": "^7.1.1",
+		"chai-bn": "^0.3.1",
+		"dotenv": "^16.0.3",
+		"lodash": "^4.17.21",
+		"moment": "^2.29.4",
+		"openzeppelin-solidity": "^3.4.2",
+		"styled-components": "^5.3.9"
+	}
 }
