--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
 		"react-bootstrap": "^2.7.2",
 		"react-cryptocoins": "^1.0.11",
 		"react-dom": "18.2.0",
+		"react-loader-spinner": "^5.3.4",
 		"react-redux": "^8.0.5",
 		"react-scripts": "^5.0.1",
+		"react-spinners": "^0.13.8",
 		"truffle": "^5.8.1",
 		"web3": "^1.9.0"
 	},
