--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
 		"ethers": "^6.2.2",
 		"firebase": "^9.18.0",
 		"html-to-image": "^1.11.11",
+		"html2canvas": "^1.4.1",
 		"ipfs-http-client": "^60.0.0",
+		"lz-string": "^1.5.0",
 		"next": "13.2.4",
 		"react": "18.2.0",
 		"react-bootstrap": "^2.7.2",
@@ -40,6 +42,7 @@
 		"react-redux": "^8.0.5",
 		"react-scripts": "^5.0.1",
 		"react-spinners": "^0.13.8",
+		"react-tabs": "^6.0.1",
 		"truffle": "^5.8.1",
 		"web3": "^1.9.0"
 	},
