confiure for sepolia deployment

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,12 +7,14 @@
 		"facere",
 		"fontawesome",
 		"fortawesome",
+		"hdwallet",
 		"IPFS",
 		"Ipsa",
 		"jtkanedev",
 		"maxime",
 		"nftl",
 		"omnis",
+		"sepolia",
 		"temporibus",
 		"ullam",
 		"unfollow",
