--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
 	"name": "decentralized-twitter",
 	"version": "0.1.0",
 	"private": true,
+	"engines": {
+		"node": "16.15.1"
+	},
 	"scripts": {
 		"dev": "next dev",
 		"build": "next build",
