--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
-		"lint": "next lint",
-		"predeploy": "npm run build",
-		"deploy": "gh-pages -d build"
+		"lint": "next lint"
 	},
 	"dependencies": {
 		"@babel/cli": "^7.21.0",
